--- a/content/blog/example.mdx
+++ b/content/blog/example.mdx
@@ -4,15 +4,16 @@ date: "2019-10-22"
 description: "A post showing MDX in action"
 ---
 
-This is a post showing MDX in action. This starter now comes with MDX out-of-the-box!
+I'm probably going to be posting a lot of code on this blog. For that I'm going to use MDX!
 
 ```js
-// you can write JSX in your Markdown!
+// MDX lets you write JSX in your Markdown! super convenient
 <button>test</button>
 ```
 
-<button>test</button>
+<button>test button :-)</button>
 
 ## MDX
 
-MDX lets you write JSX embedded inside markdown, perfect for technical blogs. MDX works with Gatsby through [gatsby-plugin-mdx](https://www.gatsbyjs.org/packages/gatsby-plugin-mdx/). You can learn more about it in the Gatsby docs: [Getting Started with MDX](https://www.gatsbyjs.org/docs/mdx/getting-started/).
+MDX lets you write JSX embedded inside markdown, which will be perfect for this blog since I'm going to be documenting my technical learning here. 
+MDX works with Gatsby through [gatsby-plugin-mdx](https://www.gatsbyjs.org/packages/gatsby-plugin-mdx/). I'm learning about it in the Gatsby docs: [Getting Started with MDX](https://www.gatsbyjs.org/docs/mdx/getting-started/).
