Fixed up the bio so it points to my profile pic. re-wrote the netlify cms config to better follow netlify example.

--- a/content/blog/example.mdx
+++ b/content/blog/example.mdx
@@ -8,10 +8,10 @@ I'm probably going to be posting a lot of code on this blog. For that I'm going 
 
 ```js
 // MDX lets you write JSX in your Markdown! super convenient
-<button>test</button>
+<button>test button</button>
 ```
 
-<button>test button :-)</button>
+<button>test button</button>
 
 ## MDX
 
