fixed featured image call in blog post template.

--- a/content/blog/example.mdx
+++ b/content/blog/example.mdx
@@ -2,6 +2,8 @@
 title: MDX!
 date: "2019-10-22"
 description: "A post showing MDX in action"
+featuredImage: ../assets/unknown.png
+
 ---
 
 I'm probably going to be posting a lot of code on this blog. For that I'm going to use MDX!
