--- a/content/blog/hi-folks/index.mdx
+++ b/content/blog/hi-folks/index.mdx
@@ -2,6 +2,8 @@
 title: New Beginnings
 date: "2020-01-15T22:40:32.169Z"
 description: another filler post
+featuredImage: ../assets/unknown.png
+
 ---
 
 Just another experiment post while I try and figure out this gatsby netlify cms blog thingy out.
