fix netlify imgs image handling

--- a/content/blog/2020-01-29-test.md
+++ b/content/blog/2020-01-29-test.md
@@ -2,6 +2,7 @@
 title: test
 date: 2020-01-29T07:19:30.690Z
 description: test
-featuredImage: content/assets/066acfab-190c-476a-9e27-08955546da9d.jpg
+featuredImage: ../assets/066acfab-190c-476a-9e27-08955546da9d.jpg
 ---
+
 test
